--- a/lab3e2.css
+++ b/lab3e2.css
@@ -1,18 +1,15 @@
-
-
-
 body{
-  background-color: white;
+  background-color: red;
 }
+.greenTEXT{ /*green & ialic*/
+  color: green;
+  Font-style: italic;
 }
-ul{
-  /*green and italic font*/
-
- font-style: italic;
+ul#menu li{ /*inline*/
+  display: inline;
 }
 li{
-  /* inline & font size*/
-style
+  /* font size*/
+
   font-size: 30px;
 }
- 
